<resources>
    <string name="app_name">Healthcare</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_route_tracker">Map</string>
    <string name="default_text">defaut text - text mặc định</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Theo dõi</string>
    <string name="remind">Nhắc nhở</string>
    <string name="Tracking">Theo dõi</string>
    <string name="Default_fragment_home_text">Đây là fragment mặc định khi chạy</string>
    <string name="default_fragment_remind_text">Đây là fragment chứa các chức năng nhắc nhở</string>
    <string name="splash_icon">splash icon</string>
    <string name="step_counter_home"><font size="20">ngày hôm nay bạn đã đi 0 bước!</font>\n\<font size="10">mục tiêu hôm nay: 100 bước!</font></string>
    <string name="mystring">
        &lt;b&gt; &lt;font size="15" color = "black"&gt;Ngày hôm nay bạn đã đi 0 bước &lt;/ font&gt;&lt;b&gt;
        &lt;br /&gt;
        &lt;small&gt;100 bước nữa để đạt mục tiêu &lt;/ b&gt;
    </string>
    <string name="edit_target_in_step_counter_message">Chỉnh sửa mục tiêu</string>
    <string name="ok_btn">Lưu</string>
    <string name="cancel_btn">Huỷ</string>
    <string name="set_target">Thiết lập mục tiêu</string>
    <string name="everyday">Mỗi ngày</string>
    <string name="step">bước</string>
    <string name="today">Hôm nay</string>
    <string name="stop_recording">Dừng</string>
    <string name="sleeping_history">Lịch sử</string>
    <string name="start_recording">Bắt đầu</string>

    <string name="heart_rate_description">Press start to monitor you heart rate</string>
    <string name="btn_start">Start</string>
    <string name="trending">Trending</string>
    <string name="heart_rate_monitor">Heart rate</string>
    <string name="heart_rate_measuring">Measuring your heart rate</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_pause">Pause</string>
    <string name="result">Result</string>
    <string name="heart_rate_monitor_guide">Place your finger on your main behind camera and flash light</string>
    <string name="btn_save">Save</string>
    <string name="google_maps_key">AIzaSyC1F4GkT6vBKNnhCfW3NI6oGP_eHCOvVfA</string>
    <string name="btn_measure_hr">Measure</string>
    <string name="activity_smartAlarm_help" translatable="false">Hướng dẫn</string>
    <string name="activity_smartAlarm_time" translatable="false">4:00</string>

    <string name="hr_notes">Notes</string>
    <string name="hr_type_some_notes">Type some notes here...</string>
    <string name="hr_choose_status">Choose your status</string>
    <string name="hr_avg_range">Average %s range</string>
    <string name="hr_resting">resting</string>
    <string name="hr_after_exercise">after exercise</string>
    <string name="hr_tired">tired</string>
    <string name="hr_excited">excited</string>
    <string name="hr_measure_history">Heart rate history</string>
    <string name="hr_select_a_day">Select a day to view results</string>
    <string name="hr_average">AVERAGE</string>
    <string name="hr_max">MAX</string>
    <string name="hr_min">MIN</string>
    <string name="btn_got_it">Got it</string>
    <string name="hr_alter_measure_btn_tutorial">You can also touch this button to measure your heart rate</string>
    <string name="hr_chart_tutorial">Touch any vertical bar to show heart rate result\'s statistic and history of this day</string>
    <string name="hr_notes_tutorial">Remember you can write some note for more information about your status</string>
    <string name="hr_status_tutorial">Touch to select your current health status</string>
    <string name="hr_measure_save_tutorial">Touch the save button to finish</string>
    <string name="hr_measure_btn_tutorial">You can touch this button to measure your heart rate</string>
    <string name="hr_status_range_tutorial">For each status, there is a average heart rate range of normal people respectively</string>
    <string name="hr_cam_diag_title">Camera permission required</string>
    <string name="hr_cam_diag_desc">We need camera permission in order to measure your heart rate</string>
    <string name="hr_cam_not_grant">Permission is not granted! this operation require camera usage permission to work</string>
    <string name="hr_cam_granted">Permission is now granted! Follow the instruction to measure your heart rate</string>
    <string name="AlarmGuide" translatable="false">Báo thức thông minh sẽ gọi bạn dậy khi bạn đã đạt được giấc ngủ sâu mà không đợi đến chính xác giỡ đã đặt báo thức để bạn có thể thoải mái và tỉnh táo hơn</string>
    <string name="Alarm_checkList" translatable="false">Chưa có chuông báo thức được đặt</string>
    <string name="smart_alarm">Chưa có chuông báo được đặt</string>

</resources>
