<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_radius"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/set_target"
        android:textColor="@color/color_calos_history_content"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/everyday"

        android:textColor="@color/color_calos_history_content"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/target_calo_value_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="5dp"
        android:background="@drawable/border_radius"
        android:inputType="numberSigned"
        android:textColor="@color/color_calos_history_content"></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="calos"
        android:textColor="@color/color_calos_history_content"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_calo_target_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_radius"
            android:text="@string/cancel_btn"
            android:textColor="@color/color_calos_history_content" />

        <Button
            android:id="@+id/save_calo_target_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border_radius"
            android:text="@string/ok_btn"
            android:textColor="@color/color_calos_history_content" />

    </LinearLayout>
</LinearLayout>